--- a/index.html
+++ b/index.html
@@ -37,22 +37,95 @@
 
     <!-- main content -->
 
-     <main>
-    <section class="placeholder">
-      <h1>Phase 1 Setup Complete</h1>
-      <p>Next we build the homepage.</p>
-    </section>
-  </main>
+    <main>
+        <section class="hero">
+            <div class="container hero-grid">
+                <div class="hero-text">
+                    <h1>Expert Physiotherapy Care for Pain-Free Movement</h1>
+                    <p>
+                        Personalized physiotherapy treatments to help you recover faster,
+                        move better, and live pain-free.
+                    </p>
 
-  <!-- footer -->
+                    <div class="hero-buttons">
+                        <a href="appointment.html" class="btn primary">Book Appointment</a>
+                        <a href="tel:+9178916912333" class="btn secondary">Call Now</a>
+                    </div>
+                </div>
 
-  <footer class="footer">
-    <div class="container">
-        <p>© 2026 PhysioCare Clinic. All Rights Reserved.</p>
-    </div>
-  </footer>
+                <div class="hero-image">
+                    <img src="assets/images/physio.jpg" alt="Physiotherapist">
+                </div>
+            </div>
+        </section>
 
-   <script src="js/app.js"></script>
+        <section class="services">
+            <div class="container">
+                <h2 class="section-title">Physiotherapy Treatments</h2>
+
+                <div class="service-grid" id="serviceGrid"></div>
+            </div>
+        </section>
+
+
+        <!-- WHY CHOOSE ME (Trust Builder) -->
+
+        <section class="why-choose4">
+            <div class="container">
+                <h2 class="section-title">Why Choose Me</h2>
+
+                <div class="why-grid">
+                    <div class="why-card">Certified Physiotherapist</div>
+                    <div class="why-card">8+ Years Experience</div>
+                    <div class="why-card">Personalized Treatment</div>
+                    <div class="why-card">Modern Equipment</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-mini">
+            <div class="container about-grid">
+                <div>
+                    <img src="assets/images/physio.jpg" alt="Phusiotherapist">
+                </div>
+
+                <div>
+                    <h2>About Your Physiotherapist</h2>
+                    <p> I am a licensed physiotherapist dedicated to helping patients
+                        recover from pain, injuries, and movement limitations through
+                        personalized physiotherapy care.</p>
+
+                        <a href="about.html" class="btn primary">Read More</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <div class="container">
+                <h2 class="section-title">Patient Reviews</h2>
+                <div id="testimonialGrid" class="testimonial-grid"></div>
+            </div>
+        </section>
+
+        <section class="appointment-cta">
+            <div class="container">
+                <h2>Book Yout Physiotherapy Session Today</h2>
+                <p>Take the first step towards pain-free movement.</p>
+                <a href="appointment.html" class="btn primary">Book Appointment</a>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- footer -->
+
+    <footer class="footer">
+        <div class="container">
+            <p>© 2026 PhysioCare Clinic. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+    <script src="js/app.js"></script>
 
 </body>
 
